--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.front" />
 
+    <user-permission android:name="android.permission.WRITE_SETTINGS"/>
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
