--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:label="@string/title_activity_homepage"
             android:theme="@style/AppTheme" />
         <activity android:name=".type_message_area" />
-        <activity android:name=".chat" />
+        <activity android:name=".Stories" />
         <activity android:name=".friendlist" />
         <activity android:name=".FaceTracker.CameraActivity"></activity>
     </application>
